# Sparkle

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.py  prerequisites.json  run.py
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  release-test.yml  release.yml
build_system/: .gitignore  __init__.py  builder_factory.py  builder_interface.py  prerequisites.py  utils.py
build_system/android/: .gitignore  build.gradle  build.py  gradle.properties
build_system/glfw/: build.py
build_system/ios/: Info.plist  LaunchScreen.storyboard  Main.storyboard  build.py  ios.toolchain.cmake
build_system/macos/: Info.plist  Main.storyboard  build.py
cmake/: GitVersion.cmake  GitVersion.cpp.in
dev/: archive_product.py  asvgf_sanity_test.py  check_format.py  check_tidy.py  ci_matrix.py  cook_log.py  cook_nrd_shaders.py  denoiser_metrics.py  denoiser_module_tests.py  functional_test.py  inject_cooked.py  package_cooked.py  reblur_pass_validation.py  reblur_temporal_validation.py  reblur_test_suite.py  requirements.txt  run_tests.py  run_without_gpu.py  utils.py
dev/reblur/: analyze_correlated_firefly.py  convergence_diagnostic.py  diagnose_energy_loss.py  test_convergence_stability.py  test_demodulated_clamping.py
docs/: ASVGFImplementationPlan.md  Architecture.md  Build.md  CI.md  CONTRIBUTING.md  Cooking.md  Development.md  Input.md  Nrd.md  NrdReviewTodo.md  REBLUR.md  ReBLUR_Standalone_Denoiser_Plan.md  ReBLUR_Standalone_Denoiser_Progress.md  RenderingValidation.md  Run.md  TODO.md  Test.md  USD.md
docs/implementation/: ASVGF.md
docs/plans/: 2026-02-25-reblur-design.md  2026-02-25-reblur-implementation.md  2026-02-25-reblur-review.md  2026-02-26-reblur-convergence-debug.md  2026-02-27-converged-history-test.md  2026-02-27-reblur-camera-motion-design.md  2026-02-27-reblur-camera-motion-impl.md  2026-02-27-reblur-camera-motion-progress.md  2026-02-27-reblur-camera-motion-tests.md  2026-03-05-floor-noise-progress.md  2026-03-05-reblur-regression-progress.md  2026-03-09-reblur-motion-ghosting-progress.md  2026-03-11-run1-history-noise-progress.md
ide/: setup.py
resources/: .gitignore  setup.py
shaders/: .gitignore  CMakeLists.txt
shaders/denoiser/reblur/: reblur_blur.cs.slang  reblur_classify_tiles.cs.slang  reblur_history_fix.cs.slang  reblur_hitdist_reconstruction.cs.slang  reblur_post_blur.cs.slang  reblur_prepass.cs.slang  reblur_split_screen.cs.slang  reblur_temporal_accumulation.cs.slang  reblur_temporal_stabilization.cs.slang  reblur_validation.cs.slang
shaders/include/: cubemap.h.hlsl  cubemap.h.slang  debug.h.hlsl  debug.h.slang  depth.h.hlsl  depth.h.slang  directional_light.h.hlsl  directional_light.h.slang  gbuffer.h.hlsl  gbuffer.h.slang  math.h.hlsl  math.h.slang  mesh.h.hlsl  mesh.h.slang  nrd.h.slang  pbr.h.hlsl  pbr.h.slang  poisson_samples.h.slang  random.h.hlsl  random.h.slang  ray_trace.h.hlsl  ray_trace.h.slang  reblur_common.h.slang  reblur_config.h.slang  reblur_data.h.slang  reblur_reprojection.h.slang  sampler.h.hlsl  sampler.h.slang  screen.h.hlsl  shadow.h.hlsl  shadow.h.slang  sky_light.h.hlsl  sky_light.h.slang  sky_map.h.hlsl  sky_map.h.slang  ssao.h.hlsl  ssao.h.slang  standard.h.hlsl  standard.h.slang  surface.h.hlsl  (+5 more)
shaders/metalfx/: metalfx_prepare.cs.slang  metalfx_resolve.cs.slang
shaders/nrd/: nrd_pack.cs.slang  nrd_resolve.cs.slang
shaders/nrd/cook/: cook_nrd_shaders.py  nrd_msl_cook.cpp
shaders/ray_trace/: asvgf_atrous.cs.slang  asvgf_debug_visualize.cs.slang  asvgf_reprojection.cs.slang  asvgf_variance.cs.slang  ray_trace.cs.hlsl  ray_trace.cs.slang  ray_trace_split.cs.slang  reblur_blur.cs.slang  reblur_classify_tiles.cs.slang  reblur_composite.cs.slang  reblur_copy_stabilized.cs.slang  reblur_final_history.cs.slang  reblur_history_fix.cs.slang  reblur_stabilize_albedo.cs.slang  reblur_temporal_accumulation.cs.slang  reblur_temporal_stabilization.cs.slang
shaders/screen/: blur.ps.hlsl  blur.ps.slang  directional_lighting.ps.hlsl  directional_lighting.ps.slang  ibl_brdf.cs.hlsl  ibl_brdf.cs.slang  ibl_diffuse.cs.hlsl  ibl_diffuse.cs.slang  ibl_specular.cs.hlsl  ibl_specular.cs.slang  screen.ps.hlsl  screen.ps.slang  screen.vs.hlsl  screen.vs.slang  sky_light.ps.hlsl  sky_light.ps.slang  tone_mapping.ps.hlsl  tone_mapping.ps.slang
shaders/standard/: depth_only.ps.hlsl  depth_only.ps.slang  depth_only.vs.hlsl  depth_only.vs.slang  forward.ps.hlsl  forward.ps.slang  gbuffer_pass.ps.hlsl  gbuffer_pass.ps.slang  mesh.vs.hlsl  mesh.vs.slang  sky_box.ps.hlsl  sky_box.ps.slang  sky_box.vs.hlsl  sky_box.vs.slang
shaders/utilities/: buffer_update.cs.hlsl  buffer_update.cs.slang  convergence_measure.cs.slang  reblur_passthrough.cs.slang
tests/: coverage.csv  coverage.json  registry.json
tests/android/: SurfaceLossRecoveryTest.cpp  surface_loss_test.py
tests/build_system/: test_android_gradle.py  test_android_package.py  test_apple_entrypoint.py  test_build_stages.py  test_check_format.py  test_check_tidy.py  test_ci_matrix.py  test_image_assembly.py  test_inject_cooked.py  test_package_cooked.py  test_prerequisites.py  test_registry.py  test_run_entry.py  test_run_tests.py  test_texture_sources.py
tests/camera/: CameraNudgeReturnTest.cpp  camera_nudge_test.py
tests/cook/: CookerRequestTest.cpp  IblParityTest.cpp  SkyCompressionTest.cpp
tests/denoiser/: DenoiserRuntimeToggleTest.cpp  DenoiserSweepTest.cpp  denoiser_compare.py  denoiser_motion_fidelity.py  denoiser_motion_test.py  denoiser_preconv_quality.py  denoiser_static_stability_test.py  nrd_inputs_test.py  run_denoiser_gates.py
tests/gpu/: GpuConvergenceDebugTest.cpp  plot_gpu_convergence_curve.py
tests/input/: InputInjectionTest.cpp
tests/io/: ImageIoTest.cpp  TextureCompressionTest.cpp
tests/nrd/: DenoiserSweepTest.cpp  NrdCookTest.mm  NrdProbeTest.mm  NrdRuntimeToggleTest.cpp  denoiser_compare.py  nrd_common.py  nrd_inputs_test.py  nrd_motion_fidelity.py  nrd_motion_test.py  nrd_preconv_quality.py  nrd_static_stability_test.py  (+1 more)
(+477 files in other folders)
